fixes hover effect behavior on mobile

--- a/src/style.css
+++ b/src/style.css
@@ -95,7 +95,7 @@ a:hover {
 	font-weight: 600;
 }
 
-.nav-item:hover{
+.nav-item:hover:not(:active){
 	box-shadow: 6px 6px 2px white;
 	color: white;
 }
